Clean up switch statement in BlockInteractionListener